tests/parsing/smtlib/v2.6/errors/013_forall_missing_body_1.smt2
(set-logic ALL)
(assert (forall ((x int)) _))
