tests/parsing/smtlib/v2.6/errors/013_forall_missing_body_1.expected
File "", line 1, character 42-43:
Error (013) while parsing a term, read the reserved word '_',
      but expected a term (body for the universal quantification).

